--- a/index.html
+++ b/index.html
@@ -4907,7 +4907,7 @@ color:#fdf7a8;
               <td style="max-width:15%"></td>
               <td style="max-width:35%"><a class="bodyMoves">Tengu Walking</a></td>
 
-              <td style="max-width:45%" class="bodyData"><img src="moves/qcbd.png"> + <img src="moves/punch.png"> (reversal only)</td>
+              <td style="max-width:45%" class="bodyData"><img src="moves/qcbd.png"> + <img src="moves/kick.png"> (reversal only)</td>
    
             </tr>
             <tr><td></td><td colspan="2"></td></tr>
