--- a/index.html
+++ b/index.html
@@ -499,7 +499,7 @@ color:#fdf7a8;
 </style>
       
 
-<font color="#0F0"> Ver(0.24) </font> - <a style="text-decoration: none" href="index013.html"><font color="#999">Ver(0.13)</font></a>
+<font color="#0F0"> Ver(0.25) </font> - <a style="text-decoration: none" href="index013.html"><font color="#999">Ver(0.13)</font></a>
 
 <tr><br></tr>	
 <span id="content_mlSub_lblSubmit" class="bodyHeading"></span>
@@ -3201,9 +3201,9 @@ color:#fdf7a8;
 			
 			<tr style="vertical-align: top">
               <td style="max-width:15%"></td>
-              <td style="max-width:35%"><a class="bodyMoves">Banishing Flat</a></td>
+              <td style="max-width:35%"><a class="bodyMoves"><a class="bodyMoves"><font color="#d00">Banishing Flat<a class="bodyMoves"></font></a></td>
 
-              <td style="max-width:45%" class="bodyData"><img src="moves/rory.png"> + <img src="moves/punch.png"></td>
+              <td style="max-width:45%" class="bodyData"><img src="moves/rory.png"> + <img src="moves/punch.png"> <img src="moves/supercancel.png"></td>
    
             </tr>
             <tr><td></td><td colspan="2"></td></tr>
@@ -3609,7 +3609,7 @@ color:#fdf7a8;
               <td style="max-width:15%"></td>
               <td style="max-width:35%"><a class="bodyMoves">Kikoushou</a></td>
 
-              <td style="max-width:45%" class="bodyData"><img src="moves/hcf.png"> <img src="moves/hcf.png"> + <img src="moves/punch.png"></td>
+              <td style="max-width:45%" class="bodyData"><img src="moves/qcf.png"> <img src="moves/qcf.png"> + <img src="moves/punch.png"></td>
        
             </tr>
             <tr><td></td><td colspan="2"></td></tr>
