--- a/index013.html
+++ b/index013.html
@@ -3502,7 +3502,7 @@ color:#fdf7a8;
               <td style="max-width:15%"></td>
               <td style="max-width:35%"><a class="bodyMoves">Kikoushou</a></td>
 
-              <td style="max-width:45%" class="bodyData"><img src="moves/hcf.png"> <img src="moves/hcf.png"> + <img src="moves/punch.png"></td>
+              <td style="max-width:45%" class="bodyData"><img src="moves/qcf.png"> <img src="moves/qcf.png"> + <img src="moves/punch.png"></td>
        
             </tr>
             <tr><td></td><td colspan="2"></td></tr>
