--- a/download.html
+++ b/download.html
@@ -535,6 +535,7 @@ color:#fdf7a8;
 			<TD>416x234 <font color="#0ff">Aspect Ratio </font><font color="#ff0">16x9</font><br>
 			<a style="text-decoration: none" target="_blank" href="download/sfz3mix.7z"> <img src="moves/022.png"> <img src="moves/v16x9.png"></a>
 			<br> <a style="text-decoration: none" target="_blank" href="download/sfz3mix.7z"><font color="#0f0">Version 0.25</font> - <font color="#ff0"> CPS2<font color="#0ff">Turbo</font></font></a>
+			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp <a style="text-decoration: none" target="_blank" href="download/sfz3mix.zip"><font color="#0f0">zip</font></a>
 			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp <a style="text-decoration: none" target="_blank" href="https://drive.google.com/uc?export=download&id=1oFdl2z_eRj5-5cV1p4NCrNnJgeR0_oQc"><font color="#f00"> Emulator for 0.25 + Samples</font></a>
 			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp <a style="text-decoration: none" target="_blank" href="download/driver_0261.zip"> Driver Mame0261</a>			
 			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp <a style="text-decoration: none" target="_blank" href="https://drive.google.com/uc?export=download&id=1Z56mOww8jySrSkyFaBzuwF14JGYIR6Xz"> Libretro Source</a>
