--- a/index.html
+++ b/index.html
@@ -2818,6 +2818,8 @@ color:#fdf7a8;
             <tr><td></td><td colspan="2"></td></tr>
 			
 			
+			<tr><td colspan="10" class="bodyTab">Lv3 Super Moves: </td></tr>	
+			
 			<tr style="vertical-align: top">
               <td style="max-width:15%"></td>
               <td style="max-width:35%"><a class="bodyMoves">Gadou Shoukou Ken</a></td>
