--- a/download.html
+++ b/download.html
@@ -622,6 +622,12 @@ color:#fdf7a8;
 			<tr><td colspan="10" class="bodyTab">Download: <font color="#cb0"><a target="_blank" href="https://github.com/finalburnneo/FBNeo/releases/tag/latest">https://github.com/finalburnneo/FBNeo/releases/tag/latest</a> <font></td></tr>			
 		    <tr><td><br></td></tr>   
 					
+			<tr><td><img src="download/raine.png" height="64" width="64" title="system" align="top"> 
+			<a class="bodyNames">Raine</a> </td></tr>
+			
+			<tr><td colspan="10" class="bodyTab">Download: <font color="#cb0"><a target="_blank" href="https://raine.1emulation.com/download/latest.html">https://raine.1emulation.com/download/latest.html</a> <font></td></tr>			
+		    <tr><td><br></td></tr>   
+					
 			
 			<tr><td><a target="_blank" href="https://hbmame.1emulation.com/"><img src="download/HBMame.png" height="64" width="64" title="system" align="top"></a>  
 	        <a class="bodyNames">HBMame</a> </td></tr>		
@@ -631,7 +637,7 @@ color:#fdf7a8;
 			<tr><td></td></tr>
 			
 			<tr><td><img src="download/retroarch.png" height="64" width="64" title="system" align="top"> 
-			<a class="bodyNames">Retroarch - FinalBurn Neo</a> </td></tr>
+			<a class="bodyNames">Retroarch - core FinalBurn Neo <font color="#ff0">(mobile)</font></a> </td></tr>
 			
 			<tr><td colspan="10" class="bodyTab">Download: <font color="#cb0"><a target="_blank" href="https://buildbot.libretro.com/nightly/">https://buildbot.libretro.com/nightly/</a> <font></td></tr>			
 		    <tr><td><br></td></tr>   
