--- a/index013.html
+++ b/index013.html
@@ -65,7 +65,7 @@ td.header2 {
             <td id="link_2" class="header"><a class="header" href="download.html">Download</a></td>
 			<td id="link_4" class="header"><a class="header" href="https://sf2mix.github.io/sfz3mix.html">Test Now</a></td>
 			<td id="link_3" class="header"><a class="header" href="arts.html">Arts</a></td>		             
-          
+            <td id="link_4" class="header"><a class="header" href="https://discord.gg/EdvGtFM8zz"> <img src="discord.png" height="40"></a></td>		
 		
 			<td style="padding:0px"><img src="bison.gif" height="80" ></td>			
 						
